--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -35,8 +35,8 @@
     
 </head>
 <body ontouchstart="">
-    <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i><p>Til topp</p></div>
-    <!-- <div class="bottom-nav" onclick="window.location.href='/bestill'"><a>Kom i gang</a></div> -->
+    <div id="backToTop" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div>
+    <div class="bottom-nav" id="bottomNav" onclick="window.location.href='/bestill'"><a>Kom i gang</a></div>
     {% include 'core/nav.html' %}
     {% include 'popup/cookie.html' %}
     <div id="allContentArea">
