--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -25,7 +25,7 @@
  </div> -->
 <!-- COVER -->
 <div class="cover" id="cover">
-   <img src="{% static '/images/covers/cover-3.png' %}" alt="cover-1">
+   <img src="{% static '/images/covers/cover4.jpg' %}" alt="main cover landig page">
 
    <div class="content" id="coverContent">
       <div class="text">
@@ -70,7 +70,7 @@
    <!-- CONTENT FOR THE WHOLE SECTION -->
    <div class="content">
       <!-- PHONE IMAGE -->
-      <img src="{% static '/images/covers/phone-web.png' %}" alt="image phone web design iphone webiser">
+      <img class="intro-img1" src="{% static '/images/covers/phone-web.png' %}" alt="image phone web design iphone webiser">
       <!-- TEXT -->
       <h1 class="heading">Fordeler med å velge oss</h1>
       <!-- BENEFITS -->
@@ -85,6 +85,9 @@
          <li>Betailing skjer veldig enkelt via vipps</li>
          <li>NO RISK, vi jobber sammen til nettsiden har blitt 100% bekreftet av deg</li>
       </div>
+      <!-- TO BE DECIDED IF THE IMAGE WILL FIT THE DESIGN -->
+         <!-- IF IMAGE FITS DESIGN, INTRO PADDING BOTTOM: 280px, IF NOT 150px -->
+      <!-- <img class="intro-img2" src="{% static '/images/covers/cover-3.png' %}" alt="image team web design making web-design thinking vector"> -->
    </div>
 </div>
 <!-- RESTAURANT AGENCY EXAMPLE -->
