--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -75,7 +75,7 @@ html, body {
   background: transparent;
   width: 100%;
   height: auto;
-  padding-bottom: 180px;
+  padding-bottom: 150px;
   position: relative;
   // SQUARES
   .square{
@@ -105,12 +105,19 @@ html, body {
     }
   }
   .content{
-    img{
+    .intro-img1{
       z-index: 90;
       position: relative;
       left: 50%;
       transform: translateX(-50%) translateY(-65px);
     }
+    // .intro-img2{
+    //   width: 280px;
+    //   height: auto;
+    //   position: absolute;
+    //   bottom: 20px;
+    //   right: 10px;
+    // }
     h1{
       &.heading{
         padding-left: 8px;
@@ -188,7 +195,7 @@ html, body {
     height: auto;
     max-width: 900px;
     filter: brightness(40%);
-    z-index: 10;
+    z-index: 10;  
   }
   .content{
     text-align: center;
