--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -26,7 +26,7 @@ body {
   width: 100%;
   height: 50px;
   position: fixed;
-  bottom: 0;
+  bottom: -35px;
   left: 0;
   background: #1cd31c;
   z-index: 100;
@@ -39,6 +39,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  opacity: 0;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.bottom-nav.active {
+  opacity: 1;
+  bottom: 0;
 }
 
 .bottom-nav a {
@@ -48,21 +56,17 @@ body {
 
 #backToTop {
   position: fixed;
-  right: 0;
-  top: 50vh;
+  right: 15px;
+  bottom: 20px;
   z-index: 110;
-  background: white;
   padding: 10px;
   padding-bottom: 20px;
   -webkit-transition: .3s;
   transition: .3s;
   opacity: 0;
   pointer-events: none;
-  border: 2px solid transparent;
-  background: linear-gradient(135deg, #688bfc, #7996f8);
+  background: white;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 5px 2px #3c54a0;
-          box-shadow: 0px 5px 2px #3c54a0;
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -73,21 +77,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
+          box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
 }
 
 #backToTop i {
   padding-top: 5px;
   font-size: 22px;
-  color: white;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-
-#backToTop p {
-  font-size: 8px;
-  color: white;
-  position: absolute;
-  bottom: -10px;
+  color: #4a60b9;
 }
 
 #backToTop.active {
@@ -102,21 +99,15 @@ body {
 
 .cover {
   width: 100%;
-  height: 85vh;
+  height: auto;
   position: relative;
-  background: #829efc;
 }
 
 .cover img {
-  width: 265px;
-  height: auto;
-  position: relative;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(100px);
-          transform: translateX(-50%) translateY(100px);
-  -webkit-box-shadow: 8px 6px 3px rgba(255, 255, 255, 0.438);
-          box-shadow: 8px 6px 3px rgba(255, 255, 255, 0.438);
-  border-radius: 30px;
+  width: 100%;
+  height: 70vh;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
 }
 
 .cover .content {
@@ -124,7 +115,7 @@ body {
   -webkit-transition: .4s ease-in;
   transition: .4s ease-in;
   position: absolute;
-  top: 240px;
+  top: 60px;
   right: -200px;
   width: 100%;
   padding-left: 15px;
