--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -100,8 +100,8 @@ html, body {
   width: 300px;
   height: 300px;
   background: #f85032;
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, #829efc13), color-stop(50%, rgba(255, 255, 255, 0)));
-  background: linear-gradient(to bottom right, #829efc13 50%, rgba(255, 255, 255, 0) 50%);
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, #829efc1c), color-stop(50%, rgba(255, 255, 255, 0)));
+  background: linear-gradient(to bottom right, #829efc1c 50%, rgba(255, 255, 255, 0) 50%);
 }
 
 .intro .content .intro-img1 {
@@ -279,156 +279,95 @@ html, body {
   font-size: 24px;
 }
 
-.sites .card {
-  height: 350px;
-  max-width: 280px;
-  border: 1px solid black;
+.sites .product-flex-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.sites .product-flex-section .card {
+  height: auto;
+  width: 45%;
+  max-width: 415px;
+  border: none;
   outline: none;
   border-radius: 7px;
-  margin: 20px auto;
-}
-
-.ecommerce {
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
   padding-bottom: 20px;
-  text-align: left;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.082);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.082);
 }
 
-.ecommerce h1.heading {
-  padding-left: 8px;
-  margin-bottom: 15px;
-  margin-top: 10px;
-  width: 100%;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  font-weight: bold;
-  font-size: 26px;
-}
-
-.ecommerce .content {
-  background: #93acffa8;
-  width: 100%;
-  height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom-left-radius: 8%;
-  border-bottom-right-radius: 8%;
-}
-
-.ecommerce .content img {
-  width: auto;
-  height: 230px;
-  -webkit-transform: translateY(25px);
-          transform: translateY(25px);
-}
-
-.icons {
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 8px;
-  text-align: center;
-  -webkit-transform: translateY(60px);
-          transform: translateY(60px);
-}
-
-.icons i {
+.sites .product-flex-section .card .product-name {
+  font-size: 20px;
+  -webkit-transform: translateY(20px) translateX(10px);
+          transform: translateY(20px) translateX(10px);
   position: relative;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background: linear-gradient(135deg, #688bfc, #7996f8);
-  font-size: 50px;
-  padding: 15px;
-  border-radius: 50px;
-  color: white;
-  width: 90px;
-  height: 90px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-.icons p {
-  -webkit-transform: translateY(7px);
-          transform: translateY(7px);
-  font-size: 15px;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  opacity: 0.8;
-  margin-bottom: 10px;
-}
-
-.personal {
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: left;
-}
-
-.personal .content {
-  background: #93acffa8;
-  width: 100%;
-  height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom-left-radius: 8%;
-  border-bottom-right-radius: 8%;
-}
-
-.personal .content img {
-  width: auto;
-  height: 180px;
+.sites .product-flex-section .card .product-name::after {
+  content: '';
+  display: block;
   -webkit-transform: translateY(45px);
           transform: translateY(45px);
+  width: 80%;
+  height: 3px;
+  background: #1cd31c;
 }
 
-.personal h1.heading {
-  padding-left: 8px;
-  margin-bottom: 15px;
-  margin-top: 10px;
+.sites .product-flex-section .card .product-price {
+  font-size: 13px;
+  -webkit-transform: translateY(30px) translateX(10px);
+          transform: translateY(30px) translateX(10px);
+  position: relative;
+}
+
+.sites .product-flex-section .card .included {
   width: 100%;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  font-weight: bold;
-  font-size: 26px;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
+  padding: 10px;
 }
 
-.personal p {
-  padding-left: 8px;
+.sites .product-flex-section .card .included ul {
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 108px;
+}
+
+.sites .product-flex-section .card .included ul li {
+  opacity: 0.7;
+  margin: 0;
+  list-style: none;
   font-size: 14px;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  opacity: 0.8;
-  line-height: 230%;
-  word-spacing: 1.5px;
+}
+
+.sites .product-flex-section .card .included ul li::before {
+  content: "\2022";
+  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #1cd31c;
+  /* Change the color */
+  font-weight: bold;
+  /* If you want it to be bold */
+  display: inline-block;
+  /* Needed to add space between the bullet and the text */
+  width: 1em;
+  /* Also needed for space (tweak if needed) */
+}
+
+.sites .product-flex-section .card .product-actions {
+  -webkit-transform: translateY(10px) translateX(120px);
+          transform: translateY(10px) translateX(120px);
+}
+
+.sites .product-flex-section .card .product-actions a {
+  color: #1cd31c;
+  font-size: 25px;
 }
 
 .positive {
