--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -172,23 +172,49 @@
 </div>
 
 <br>
+<br>
+<br>
+
+<!-- LANGUAGES -->
+<div class="languages">
+   <!-- HTML -->
+   <i class="fab fa-html5"></i>
+   <!-- PYTHON -->
+   <i class="fab fa-python"></i>
+   <!-- CSS -->
+   <i class="fab fa-css3-alt"></i>
+   <!-- JAVASCRIPT -->
+   <i class="fab fa-js-square"></i>
+</div>
+
 <!-- POSITIVE -->
-<div class="positive">
+<!-- <div class="positive">
    <div class="content">
       <div class="content-2">
          <h1>Hva venter du på?</h1>
          <a href="/bestill">Kom i gang nå!</a>
       </div>
    </div>
-</div>
-<br>
+</div> -->
 <br>
 <br>
 <br>
 <!-- CONTACT US -->
-<div class="contact-us" id="contactUs">
-   <h1 class="heading">Trenger du ekstra hjelp?</h1>
-   <p>Trykk på chatt ikonet nederst til høyre, eller kontakter oss under</p>
+<div class="contact-us-home" id="contactUs">
+--- text here ---
+<br>
+<br>
+<br>
+--- and here ---
+<br>
+<br>
+<br>
+<br>
+-- mby more here ---
+
+
+
+   <!-- PASTE INTO CONTACT PAGE -->
    <!-- <form action="" method="POST">
       {% csrf_token %}
       <br>
