--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -201,16 +201,28 @@
 <br>
 <!-- CONTACT US -->
 <div class="contact-us-home" id="contactUs">
---- text here ---
+<br>
+<br>
+   <h1 class="heading">Trenger du hjelp?</h1>
+<br>
+<br>
+<!-- CONTACT TEXT -->
+<h1 class="contact-text">Kontakter oss</h1>
+<a href=""><i class="fas fa-arrow-right"></i></a>
 <br>
 <br>
 <br>
---- and here ---
+<br>
+<!-- FORUM TEXT -->
+<h1 class="forum-text">Forum</h1>
+<a href=""><i class="fas fa-arrow-right"></i></a>
 <br>
 <br>
 <br>
 <br>
--- mby more here ---
+<!-- INSTAGRAM TEXT -->
+<h1 class="instagram-text">Dm oss på InstaGram</h1>
+<a href=""><i class="fas fa-arrow-right"></i></a>
 
 
 
