--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -74,7 +74,7 @@ html, body {
   background: transparent;
   width: 100%;
   height: auto;
-  padding-bottom: 150px;
+  padding-bottom: 50px;
   position: relative;
 }
 
@@ -84,8 +84,8 @@ html, body {
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   background: #f85032;
   background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, rgba(255, 255, 255, 0)), color-stop(50%, #829efc33));
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 50%, #829efc33 50%);
@@ -453,6 +453,26 @@ html, body {
   width: 100%;
   height: 500px;
   text-align: left;
+}
+
+.contact-us-home h1 {
+  color: white;
+  font-size: 18px;
+  padding-left: 10px;
+}
+
+.contact-us-home h1.heading {
+  font-size: 26px;
+}
+
+.contact-us-home a {
+  padding-left: 15px;
+}
+
+.contact-us-home a i {
+  -webkit-transform: translateY(10px) translateX(20px);
+          transform: translateY(10px) translateX(20px);
+  font-size: 18px;
   color: white;
 }
 
