--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -20,9 +20,8 @@
 }
 
 #footer .footer-section .footer-ul h1 {
-  text-transform: uppercase;
-  font-family: 'Sniglet', cursive;
-  color: #142c78;
+  font-family: 'Lato', sans-serif;
+  color: black;
   font-weight: 700;
   font-size: 26px;
 }
@@ -35,8 +34,8 @@
   font-family: 'Sniglet', cursive;
   display: inline-block;
   width: 50%;
-  text-decoration: none;
-  color: #3c54a0;
+  text-decoration: underline;
+  color: black;
   font-size: 14px;
   padding: 5px;
   opacity: 0.7;
@@ -66,6 +65,17 @@
   transition: .3s ease-in-out;
 }
 
+#footer .social-icons::after {
+  content: '';
+  display: block;
+  position: absolute;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+  width: 60%;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.164);
+}
+
 #footer .social-icons i {
   border-radius: 15px;
   margin: 13px;
@@ -82,15 +92,15 @@
   left: 0;
   width: 100%;
   height: auto;
-  background: #6e8efb;
   text-align: center;
 }
 
 #footer .copyright p {
   padding: auto;
   margin: auto;
-  color: #fafafa;
+  color: black;
   font-size: 12px;
+  font-weight: bold;
 }
 
 @media only screen and (min-device-width: 1024px) {
