--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -13,9 +13,8 @@
             width: 50%;
             text-align: center;
             h1{
-                text-transform: uppercase;
-                font-family: 'Sniglet', cursive;
-                color: rgb(20, 44, 120);
+                font-family: 'Lato', sans-serif;
+                color: black;
                 font-weight: 700;
                 font-size: 26px;
             }
@@ -25,8 +24,8 @@
                     font-family: 'Sniglet', cursive;
                     display: inline-block;
                     width: 50%;
-                    text-decoration: none;
-                    color: rgb(60, 84, 160);
+                    text-decoration: underline;
+                    color: black;
                     font-size: 14px;
                     padding: 5px;
                     opacity: 0.7;
@@ -47,6 +46,15 @@
         margin-top: 10px;
         margin-bottom: 10px;
         transition: .3s ease-in-out;
+        &::after{
+            content: '';
+            display: block;
+            position: absolute;
+            transform: translateY(25px);
+            width: 60%;
+            height: 2px;
+            background: rgba(0, 0, 0, 0.164);
+        }
         i{
             border-radius: 15px;
             margin: 13px;
@@ -62,13 +70,13 @@
         left: 0;
         width: 100%;
         height: auto;
-        background: #6e8efb;
         text-align: center;
         p{
             padding: auto;
             margin: auto;
-            color: rgb(250, 250, 250);
+            color: black;
             font-size: 12px;
+            font-weight: bold;
         }
     }
 }
