--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -32,7 +32,7 @@
          <h1>Moderne nettsider til lave priser</h1>
          <p>Lave priser, kort leverings tid</p>
          <div class="cover-actions">
-            <a href="/">Les om oss</a>
+            <a href="/om-webiser">Les om oss</a>
             <a href="/bestill">Kom i gang</a>
          </div>
       </div>
@@ -52,7 +52,7 @@
       </p>
    </div>
    <div class="info-actions">
-      <a href="">Les mer</a>
+      <a href="/om-webiser">Les mer</a>
    </div>
 </div>
 <br>
@@ -208,21 +208,21 @@
 <br>
 <!-- CONTACT TEXT -->
 <h1 class="contact-text">Kontakter oss</h1>
-<a href=""><i class="fas fa-arrow-right"></i></a>
+<a href="/kontakter-oss"><i class="fas fa-arrow-right"></i></a>
 <br>
 <br>
 <br>
 <br>
 <!-- FORUM TEXT -->
 <h1 class="forum-text">Forum</h1>
-<a href=""><i class="fas fa-arrow-right"></i></a>
+<a href="/webiser-forum"><i class="fas fa-arrow-right"></i></a>
 <br>
 <br>
 <br>
 <br>
 <!-- INSTAGRAM TEXT -->
 <h1 class="instagram-text">Dm oss på InstaGram</h1>
-<a href=""><i class="fas fa-arrow-right"></i></a>
+<a href="https://www.instagram.com/webiser.no/"><i class="fas fa-arrow-right"></i></a>
 
 
 
