--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -14,32 +14,20 @@
    </div>
  </div>
 
-<div class="cover">
-   <div class="cover-desktop">
-      <div class="cover-text">
+ <div class="cover" id="cover">
+   <img src="{% static '/images/covers/cover4.jpg' %}" alt="main cover landig page">
+
+   <div class="content" id="coverContent">
+      <div class="text">
          <h1>Les om Webiser</h1>
-         <p id="coverText2">Få mer informasjon om teamet våres, og hvordan Webiser fungerer</p>
-      </div>
-      <div class="img">
-         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
-      </div>
-   </div>
-   <div class="cover-mobile">
-      <div class="cover-text">
-         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
-         <h1>Les om Webiser</h1>
-         <p id="coverText2">Få mer informasjon om teamet våres, og hvordan Webiser fungerer</p>
+         <p>Bli kjent med oss</p>
       </div>
    </div>
 </div>
 
-<div class="about-us" id="aboutUs">
-   <h1>Hvem er vi?</h1>
-   <div class="text">
-      <p id="firstText">Webiser er en nettiside utvikling og design firma. Vi bygger nettsidene ved hjelp av de tre frontend progamering språkene, som er Html5, CSS3 og JavaScript...</p>
-      <p id="secondText"><span id="opacity0">Webiser er en nettiside development firma. Vi bygger nettsidene ved hjelp av de tre frontend progamering språkene, som er Html5, CSS3 og JavaScript.</span><br> Vi bruker Python og Django for å bygge enten ecommerce eller blog nettsider, derfor anbefaller vi at du har noe python forståelse om du vil gjøre noen endringer selv. Vi bruker ikke Python eller Django for å bygge nettsider som ikke trenger bruk av Python eller Django, men vi anbefaller at du kan de tre frontend progamering språkene, som er <a onclick="html()">Html5</a>, <a onclick="css()">CSS3</a> og <a onclick="javascript()">JavaScript</a> <br>Ved bestilling hos oss, så har du plikt til å få 4 timer gratis hjelp hver uke. Vår team består av designere som sørger for at designen blir best som mulig, og utviklere som bidrar til at alt virker som det skal.</p>
-      <button id="readMore" onclick="aboutUsReadMore()">Les mer</button>
-   </div>
-   <div class="border"></div>
-</div>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock %}
