--- a/static/scss/store/about.css
+++ b/static/scss/store/about.css
@@ -1,11 +1,3 @@
-.cover-mobile {
-  height: 55vh;
-}
-
-.cover-mobile .cover-text img {
-  top: 120px;
-}
-
 .load-wrapp {
   float: left;
   width: 100%;
@@ -553,5 +545,22 @@
     background-color: #f5634a;
     width: 25px;
   }
+}
+
+.cover img {
+  height: 40vh;
+}
+
+.cover .content {
+  -webkit-transition: .8s ease-in;
+  transition: .8s ease-in;
+  position: absolute;
+  top: 60px;
+  width: 100%;
+  padding-left: 15px;
+  opacity: 1;
+  right: 0;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 /*# sourceMappingURL=about.css.map */
