--- a/static/scss/store/about.scss
+++ b/static/scss/store/about.scss
@@ -1,14 +1,5 @@
 $loader: rgb(80, 104, 180);
 
-// STANDARD PHONE
-.cover-mobile{ 
-    height: 55vh;
-    .cover-text{
-        img{
-            top: 120px;
-        }
-    }
-}
 .load-wrapp {
     float: left;
     width: 100%;
@@ -349,4 +340,21 @@ $loader: rgb(80, 104, 180);
       width: 25px;
     }
   }
+}
+
+// COVER
+.cover{
+  img{
+    height: 40vh;
+  }
+  .content{
+    transition: .8s ease-in;
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    padding-left: 15px;
+    opacity: 1;
+    right: 0;
+    transform: scale(1);
+}
 }
