--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -292,6 +292,7 @@ html, body {
 }
 
 .sites .product-flex-section .card {
+  margin: 5px 5px;
   height: auto;
   width: 45%;
   max-width: 415px;
@@ -474,109 +475,6 @@ html, body {
           transform: translateY(10px) translateX(20px);
   font-size: 18px;
   color: white;
-}
-
-.contact-us-home.active form {
-  opacity: 1;
-}
-
-.contact-us-home form {
-  text-align: left;
-  padding: 10px;
-  margin-top: 0;
-  opacity: 1;
-  -webkit-transition: all ease-in .5s;
-  transition: all ease-in .5s;
-  position: relative;
-  background: #e8edff;
-  border-radius: 4px;
-  max-width: 360px;
-}
-
-.contact-us-home form .form-tag-navn {
-  font-size: 15px;
-  color: #304792;
-  background: #e8edff;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 24px;
-  border-radius: 5px;
-}
-
-.contact-us-home form .form-tag-email {
-  font-size: 15px;
-  color: #304792;
-  border-radius: 5px;
-  background: #e8edff;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 88px;
-}
-
-.contact-us-home form .form-tag-message {
-  font-size: 15px;
-  color: #304792;
-  background: #e8edff;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 152px;
-  border-radius: 5px;
-}
-
-.contact-us-home form textarea {
-  width: 100%;
-  border: 2px solid #3c54a0;
-  border-radius: 4px;
-  padding: 3px;
-  padding-top: 5px;
-  height: 100px;
-  outline: none;
-  font-size: 15px;
-}
-
-.contact-us-home form input {
-  width: 100%;
-  border: 2px solid #3c54a0;
-  border-radius: 4px;
-  padding: 7px;
-  outline: none;
-  font-size: 15px;
-}
-
-.contact-us-home form .form-actions {
-  margin-top: 25px;
-}
-
-.contact-us-home form .form-actions button {
-  border-radius: 4px;
-  width: 200px;
-  font-size: 16px;
-  padding: 10px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  color: white;
-  outline: none;
-  background: linear-gradient(135deg, #5a7ef5, #607bd3);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
-}
-
-.contact-us-home form .form-actions button:hover {
-  background: white;
-  color: black;
 }
 
 @media only screen and (min-device-width: 768px) {
