--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -70,7 +70,7 @@
    <!-- CONTENT FOR THE WHOLE SECTION -->
    <div class="content">
       <!-- PHONE IMAGE -->
-      <img class="intro-img1" src="{% static '/images/covers/phone-web.png' %}" alt="image phone web design iphone webiser">
+      <img class="intro-img1" id="introImgPhone" src="{% static '/images/covers/phone-web.png' %}" alt="image phone web design iphone webiser">
       <!-- TEXT -->
       <h1 class="heading">Fordeler med å velge oss</h1>
       <!-- BENEFITS -->
